Fix spacing/sizing of modal sidebar on video show page

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -23,7 +23,7 @@
 }
 
 .header-burger-button > svg {
-    font-size: 20px;
+    font-size: 21px;
     font-weight: lighter;
     color: #606060;
 }
@@ -40,12 +40,11 @@
 
 .header-logo > svg {
     color: #FF0000;
-    font-size: 22px;
+    font-size: 23px;
     transform: rotate(180deg);
 }
 
 .header-logo span {
-    // font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Pathway Gothic One', sans-serif;
     font-weight: bolder;
     padding-left: 3px;
