--- a/app/assets/stylesheets/modal_sidebar.scss
+++ b/app/assets/stylesheets/modal_sidebar.scss
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 17px 26px 17px 24px;
+    padding: 16px 26px 15px 24px;
     box-shadow: 0 1px 10px hsl(0, 0%, 90%);
     background: rgb(255, 255, 255);
 }
